--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,12 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
-  }
+  },
+
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/glasslotus.png"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
