--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
 
   "web_accessible_resources": [
     {
-      "resources": ["icons/glasslotus.png"],
+      "resources": ["icons/lotus.png"],
       "matches": ["<all_urls>"]
     }
   ]
